--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -4,24 +4,30 @@
     color: white;
     background-color: black;
     padding: 2rem;
-    height: 30dvh;
+    min-height: 30dvh;
 }
 
 .footerSection {
     display: flex;
     flex-direction: column;
+    margin: 0 2rem;
+    gap: 0.5rem;
+}
+
+.footerSection p {
+    margin: 0;
+    line-height: 1.4;
 }
 
 .footerLink {
     text-decoration: none;
-    color: gray;
-}
-
-.footerLink:hover {
     color: white;
 }
 
+.footerLink:hover {
+    color: gray;
+}
+
 .qrCode {
-    max-width: 150px;
-    margin: 1rem 0;
+    max-width: 5rem;
 }
