--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -17,6 +17,7 @@
     display: flex;
     margin: 0;
     padding: 0;
+    gap: 2rem;
 }
 
 .navLink {
@@ -27,6 +28,12 @@
 }
 
 .navLink:hover {
+    background-color: white;
+    color: black;
+    border-radius: 4px;
+}
+
+.navLink.active {
     background-color: white;
     color: black;
     border-radius: 4px;
